--- a/Tic-Tac-Toe/TIC-TAC-TOE.HTML
+++ b/Tic-Tac-Toe/TIC-TAC-TOE.HTML
@@ -122,10 +122,11 @@
                     win = matrix[i][0];
                 //col check
                 if (matrix[0][i] == matrix[1][i] && matrix[1][i] == matrix[2][i])
-                    win = matrix[0][i];
+                   
+                win = matrix[0][i];
 
             }
-            //diagnol check
+            //diagonal check
 
             if (matrix[0][0] == matrix[1][1] == matrix[2][2])
                 win = matrix[1][1];
